# CppProjectTemplate

./: .gitmodules  CMakeLists.txt  CMakeLists_8txt.html  ProjectConfig.h  conanfile.txt  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  my__lib_8cc.html  my__lib_8cc__incl.dot
app/: CMakeLists.txt  main.cc
benchmarks/: CMakeLists.txt  main.cc
ext/: CMakeLists.txt
inc/: my_lib.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  files_1.js  functions_0.js  functions_1.js  functions_2.js
src/: CMakeLists.txt  my_lib.cc
tests/: CMakeLists.txt  main.cc
